[tool.poetry]
name = "podman-slurm-min"
version = "0.1.0"
description = "This project contains a minimal slurm configuration and a Dockerfile that can be used to run a docker container using podman via slurm."
authors = ["LuKrO2011 <lukas.krodinger@gmail.com>"]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.11"
torch = [{ url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-win_amd64.whl", markers = "platform_system == 'Windows'" },
    { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl", markers = "platform_system == 'Linux'" }]
torchaudio = [{ url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp311-cp311-win_amd64.whl", markers = "platform_system == 'Windows'" },
    { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp311-cp311-linux_x86_64.whl", markers = "platform_system == 'Linux'" }]
torchvision = [{ url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-win_amd64.whl", markers = "platform_system == 'Windows'" },
    { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-linux_x86_64.whl", markers = "platform_system == 'Linux'" }]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
